2004-04-26  Karl Berry  <karl@gnu.org>

	* lib/system.h (STRCASEEQ, STRNCASEEQ): new #defines for
		convenience.
	* makeinfo/cmds.c (cm_strong): actually change the output to avoid a
	spurious xref.  Suggestion from Jan Nieuwenhuizen
	<janneke@gnu.org>, 26 Apr 2004 00:04:04 +0200, emacs-devel.

	* automake 1.8.4.

2004-04-24  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\emptyusermacros, \identity): new macros.
	(\indexdummiesnofonts): call it.
	This is to semi-support macro calls in the arg to @deffn.
	Report from: Akim Demaille <akim@epita.fr>, 20 Apr 2004 17:48:28 +0200.

2004-04-21  Karl Berry  <karl@gnu.org>

	* configure.ac (gl_FUNC_MKSTEMP): rename from UTILS_FUNC_MKSTEMP,
	per new gnulib code.

2004-04-20  Karl Berry  <karl@gnu.org>

	* makeinfo/tests/copying: force POSIX language setting.

2004-04-19  Karl Berry  <karl@gnu.org>

	* makeinfo/cmds.c (cm_code): use <samp> for commands other than
	@code, so we get typewriter output; and add `...'
	for @samp.
	Report from: John Blevin <blevin@lucent.com>, 
	16 Apr 2004 11:40:01 -0400.

	* makeinfo/html.c (html_output_head) [CSS_FONT_ROMAN,
	CSS_FONT_SMALL_CAPS]: prettify.

2004-04-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\Orb): define if undefined.
	Report from Laurent Siebenmann.

	* util/dir-example: diff updates.

2004-04-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex: remove trailing blanks.  suggestion from Jim.

2004-04-12  Paul Eggert  <eggert@twinsun.com>

	* doc/Makefile.am (info.1, infokey.1, install-info.1,
	makeinfo.1, texi2dvi.1, texindex.1): Don't use $< in ordinary
	rules; it's not portable.
	* util/Makefile.am (texinfo.cat): Likewise.

2004-04-12  Karl Berry  <karl@gnu.org>

	* bootstrap: update from berlios.

2004-04-11  Karl Berry  <karl@gnu.org>

	* Version 4.7.

2004-04-09  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (execute_string): do not free the temporary copy
	of input_filename until we're definitely done with
	it.  It is used in line_error, etc.
