@@ -1,3 +1,8 @@
+2004-04-29  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* makeinfo/makeinfo.c (remember_error): Try cm_bye not more than
+	twice.  Fixes `Too many errors!  Gave up.' looping.
+
 2004-04-26  Karl Berry  <karl@gnu.org>
 
 	* lib/system.h (STRCASEEQ, STRNCASEEQ): new #defines for
